--- a/_publications/2024-05-11-wba.md
+++ b/_publications/2024-05-11-wba.md
@@ -2,7 +2,7 @@
 title: "Weighted Branch Aggregation"
 collection: publications
 permalink: /publication/2024-05-11-wba
-excerpt: 'Track detection for autonomous racing'
+excerpt: ''
 date: 2024-05-11
 venue: 'Tiny Papers @ ICLR 2024'
 paperurl: '/files/weighted_branch_aggregation_ba.pdf'
